fix: Replace no-unused-vars with @typescript-eslint's

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -127,7 +127,7 @@
 		"no-undef": "error",
 		"no-undef-init": 0,
 		"no-undefined": 0,
-		"no-unused-vars": "warn",
+		"no-unused-vars": 0,
 		"no-use-before-define": 0,
 		"callback-return": 0,
 		"global-require": 0,
@@ -312,6 +312,7 @@
 		"@typescript-eslint/no-empty-interface": 0,
 		"@typescript-eslint/no-extraneous-class": "error",
 		"@typescript-eslint/no-for-in-array": "error",
+		"@typescript-eslint/no-unused-vars": "error",
 		"@typescript-eslint/no-misused-new": "error",
 		"@typescript-eslint/no-non-null-assertion": 0,
 		"@typescript-eslint/no-useless-constructor": "error",
