--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,8 @@
 	"compilerOptions": {
 		"allowSyntheticDefaultImports": true,
 		"alwaysStrict": true,
-		"declaration": false,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
-		"strict": true,
 		"incremental": true,
 		"lib": [
 			"esnext",
@@ -18,17 +16,13 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"noUnusedLocals": true,
-		"outDir": "./dist",
 		"pretty": true,
 		"removeComments": true,
 		"resolveJsonModule": true,
 		"sourceMap": true,
-		"strictFunctionTypes": true,
+		"strict": true,
 		"strictBindCallApply": true,
-		"target": "esnext",
-		"types": ["node"]
-	},
-	"include": [
-		"./src/**/*"
-	]
+		"strictFunctionTypes": true,
+		"target": "esnext"
+	}
 }
