--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "url": "https://github.com/kyranet/eslint-config-bamboo"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "eslint": "^6.1.0",
-    "typescript": "^3.5.3"
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
+    "eslint": "^6.4.0",
+    "typescript": "^3.6.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
+    "eslint": "^6.4.0",
+    "typescript": "^3.6.3"
   },
   "keywords": [
     "typescript",
