--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -309,6 +309,7 @@
 				"static-method"
 			]
 		}],
+		"@typescript-eslint/no-unnecessary-condition": "error",
 		"@typescript-eslint/require-await": "error",
 		"@typescript-eslint/no-misused-promises": "error",
 		"@typescript-eslint/no-floating-promises": "error",
