--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,7 @@
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"incremental": true,
-		"lib": [
-			"esnext",
-			"esnext.array",
-			"esnext.asynciterable",
-			"esnext.intl",
-			"esnext.symbol"
-		],
+		"lib": ["esnext"],
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"noUnusedLocals": true,
@@ -20,8 +14,6 @@
 		"resolveJsonModule": true,
 		"sourceMap": true,
 		"strict": true,
-		"strictBindCallApply": true,
-		"strictFunctionTypes": true,
 		"target": "esnext"
 	}
 }
