--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,16 @@
 {
 	"env": {
 		"es6": true,
+		"es2017": true,
+		"es2020": true,
 		"node": true
 	},
 	"extends": "plugin:@typescript-eslint/recommended",
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": 2020,
-		"sourceType": "module"
+		"sourceType": "module",
+		"project": "./tsconfig.eslint.json"
 	},
 	"plugins": ["@typescript-eslint"],
 	"rules": {
