--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -346,6 +346,7 @@
 		"@typescript-eslint/no-extra-semi": "error",
 		"@typescript-eslint/no-throw-literal": "error",
 		"@typescript-eslint/no-implied-eval": "error",
+		"@typescript-eslint/no-invalid-this": "error",
 		"@typescript-eslint/adjacent-overload-signatures": "error",
 		"@typescript-eslint/array-type": 0,
 		"@typescript-eslint/await-thenable": 0,
