--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,18 @@
 {
-	"parser": "@typescript-eslint/parser",
-	"plugins": ["@typescript-eslint"],
-	"extends": "plugin:@typescript-eslint/recommended",
-	"parserOptions": {
-		"ecmaVersion": 2019,
-		"sourceType": "module",
-		"project": "./tsconfig.json"
-	},
 	"env": {
 		"es6": true,
+		"es2017": true,
+		"es2020": true,
 		"node": true
 	},
+	"extends": "plugin:@typescript-eslint/recommended",
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaVersion": 2020,
+		"sourceType": "module",
+		"project": "./tsconfig.eslint.json"
+	},
+	"plugins": ["@typescript-eslint"],
 	"rules": {
 		"for-direction": 0,
 		"getter-return": 0,
@@ -29,11 +31,16 @@
 		"no-ex-assign": 0,
 		"no-extra-boolean-cast": 0,
 		"no-extra-parens": 0,
-		"no-extra-semi": "error",
+		"no-extra-semi": 0,
 		"no-func-assign": 0,
 		"no-inner-declarations": 0,
 		"no-invalid-regexp": "warn",
-		"no-irregular-whitespace": ["error", { "skipStrings": true, "skipComments": true, "skipRegExps": true, "skipTemplates": true }],
+		"no-irregular-whitespace": ["error", {
+			"skipStrings": true,
+			"skipComments": true,
+			"skipRegExps": true,
+			"skipTemplates": true
+		}],
 		"no-obj-calls": "warn",
 		"no-prototype-builtins": 0,
 		"no-regex-spaces": "warn",
@@ -55,7 +62,7 @@
 		"curly": ["error", "multi-line", "consistent"],
 		"default-case": 0,
 		"dot-location": ["error", "property"],
-		"dot-notation": ["error", { "allowKeywords": true, "allowPattern": "(^[A-Z])|(^[a-z]+(_[a-z]+)+$)" }],
+		"dot-notation": 0,
 		"eqeqeq": ["error", "smart"],
 		"guard-for-in": "warn",
 		"no-alert": "error",
@@ -75,7 +82,7 @@
 		"no-global-assign": 0,
 		"no-implicit-coercion": "error",
 		"no-implicit-globals": 0,
-		"no-implied-eval": "error",
+		"no-implied-eval": 0,
 		"no-invalid-this": 0,
 		"no-iterator": 0,
 		"no-labels": 0,
@@ -99,7 +106,7 @@
 		"no-self-assign": "error",
 		"no-self-compare": "warn",
 		"no-sequences": "error",
-		"no-throw-literal": "error",
+		"no-throw-literal": 0,
 		"no-unmodified-loop-condition": 0,
 		"no-unused-expressions": 0,
 		"no-unused-labels": "error",
@@ -141,14 +148,17 @@
 		"no-restricted-modules": 0,
 		"no-sync": 0,
 		"array-bracket-newline": ["error", "consistent"],
-		"array-bracket-spacing": ["error", "never", { "singleValue": false, "objectsInArrays": false, "arraysInArrays": false }],
+		"array-bracket-spacing": ["error", "never", {
+			"singleValue": false,
+			"objectsInArrays": false,
+			"arraysInArrays": false
+		}],
 		"array-element-newline": 0,
 		"block-spacing": ["error", "always"],
 		"brace-style": ["error", "1tbs", { "allowSingleLine": true }],
-		"camelcase": 0,
 		"capitalized-comments": 0,
 		"comma-dangle": ["error", "never"],
-		"comma-spacing": ["error", { "before": false, "after": true }],
+		"comma-spacing": 0,
 		"comma-style": ["error", "last"],
 		"computed-property-spacing": ["error", "never"],
 		"consistent-this": ["error", "self"],
@@ -163,18 +173,12 @@
 		"id-match": 0,
 		"indent": 0,
 		"jsx-quotes": ["error", "prefer-double"],
-		"key-spacing": ["error", { "beforeColon": false, "afterColon": true, "mode": "strict" }],
-		"keyword-spacing": ["error", {
-			"before": true,
-			"after": true,
-			"overrides": {
-				"if": { "after": true },
-				"for": { "after": true },
-				"while": { "after": true },
-				"catch": { "after": true },
-				"switch": { "after": true }
-			}
+		"key-spacing": ["error", {
+			"beforeColon": false,
+			"afterColon": true,
+			"mode": "strict"
 		}],
+		"keyword-spacing": 0,
 		"line-comment-position": 0,
 		"linebreak-style": ["error", "unix"],
 		"lines-around-comment": 0,
@@ -217,30 +221,58 @@
 		"one-var": ["error", "never"],
 		"one-var-declaration-per-line": 0,
 		"operator-assignment": ["error", "always"],
-		"operator-linebreak": ["error", "before", { "overrides": { "+": "after", "-": "after" } }],
+		"operator-linebreak": ["error", "before", {
+			"overrides": {
+				"+": "after",
+				"-": "after"
+			}
+		}],
 		"padded-blocks": ["error", { "classes": "always" }],
 		"padding-line-between-statements": 0,
-		"quote-props": ["error", "consistent-as-needed", { "keywords": true, "unnecessary": true, "numbers": false }],
-		"quotes": ["error", "single", { "avoidEscape": true, "allowTemplateLiterals": true }],
+		"quote-props": ["error", "consistent-as-needed", {
+			"keywords": true,
+			"unnecessary": true,
+			"numbers": false
+		}],
+		"quotes": ["error", "single", {
+			"avoidEscape": true,
+			"allowTemplateLiterals": true
+		}],
 		"require-jsdoc": 0,
 		"semi": 0,
-		"semi-spacing": ["error", { "before": false, "after": true }],
+		"semi-spacing": ["error", {
+			"before": false,
+			"after": true
+		}],
 		"semi-style": ["error", "last"],
 		"sort-keys": 0,
 		"sort-vars": 0,
 		"space-before-blocks": ["error", "always"],
-		"space-before-function-paren": ["error", { "anonymous": "never", "named": "never", "asyncArrow": "always" }],
+		"space-before-function-paren": ["error", {
+			"anonymous": "never",
+			"named": "never",
+			"asyncArrow": "always"
+		}],
 		"space-in-parens": ["error", "never"],
 		"space-infix-ops": ["error", { "int32Hint": true }],
-		"space-unary-ops": ["error", { "words": true, "nonwords": false }],
+		"space-unary-ops": ["error", {
+			"words": true,
+			"nonwords": false
+		}],
 		"spaced-comment": ["error", "always"],
-		"switch-colon-spacing": ["error", { "after": true, "before": false }],
+		"switch-colon-spacing": ["error", {
+			"after": true,
+			"before": false
+		}],
 		"template-tag-spacing": ["error", "never"],
 		"unicode-bom": ["error", "never"],
 		"wrap-regex": 0,
 		"arrow-body-style": ["error", "as-needed"],
 		"arrow-parens": ["error", "as-needed", { "requireForBlockBody": false }],
-		"arrow-spacing": ["error", { "before": true, "after": true }],
+		"arrow-spacing": ["error", {
+			"before": true,
+			"after": true
+		}],
 		"constructor-super": "error",
 		"generator-star-spacing": ["error", "before"],
 		"no-class-assign": "warn",
@@ -278,15 +310,51 @@
 		"symbol-description": "warn",
 		"template-curly-spacing": ["error", "never"],
 		"yield-star-spacing": ["error", "before"],
+		"@typescript-eslint/no-invalid-void-type": "error",
+		"@typescript-eslint/dot-notation": ["error", {
+			"allowKeywords": true,
+			"allowPattern": "(^[A-Z])|(^[a-z]+(_[a-z]+)+$)",
+			"allowPrivateClassPropertyAccess": true
+		}],
+		"@typescript-eslint/keyword-spacing": ["error", { "before": true, "after": true }],
+		"@typescript-eslint/init-declarations": "error",
+		"@typescript-eslint/no-unsafe-assignment": "error",
+		"@typescript-eslint/prefer-reduce-type-parameter": "error",
+		"@typescript-eslint/class-literal-property-style": "error",
+		"@typescript-eslint/no-unsafe-return": "error",
+		"@typescript-eslint/no-unsafe-member-access": "warn",
+		"@typescript-eslint/no-unsafe-call": "error",
+		"@typescript-eslint/no-base-to-string": "error",
+		"@typescript-eslint/switch-exhaustiveness-check": "warn",
+		"@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
+		"@typescript-eslint/no-dupe-class-members": "error",
+		"@typescript-eslint/prefer-as-const": "error",
+		"@typescript-eslint/comma-spacing": ["error", { "before": false, "after": true }],
+		"@typescript-eslint/no-extra-non-null-assertion": "error",
+		"@typescript-eslint/no-non-null-asserted-optional-chain": "error",
+		"@typescript-eslint/naming-conventions": [
+			"error",
+			{ "selector": "default", "format": ["camelCase"], "leadingUnderscore": "forbid", "trailingUnderscore": "forbid" },
+			{ "selector": "parameter", "leadingUnderscore": "allow" },
+			{ "selector": "property", "modifiers": ["readonly"], "prefix": ["k"], "format": ["PascalCase"] },
+			{ "selector": "enumMember", "format": ["PascalCase"] },
+			{ "selector": "typeLike", "format": ["PascalCase"] }
+		],
+		"@typescript-eslint/no-unnec-type-assert": "warn",
+		"@typescript-eslint/no-unnec-cond": "warn",
+		"@typescript-eslint/default-param-last": "error",
+		"@typescript-eslint/no-extra-semi": "error",
+		"@typescript-eslint/no-throw-literal": "error",
+		"@typescript-eslint/no-implied-eval": "error",
+		"@typescript-eslint/no-invalid-this": "error",
 		"@typescript-eslint/adjacent-overload-signatures": "error",
 		"@typescript-eslint/array-type": 0,
 		"@typescript-eslint/await-thenable": 0,
-		"@typescript-eslint/class-name-casing": "error",
 		"@typescript-eslint/explicit-member-accessibility": "error",
 		"@typescript-eslint/indent": ["error", "tab"],
-		"@typescript-eslint/interface-name-prefix": 0,
 		"@typescript-eslint/member-ordering": ["error", {
 			"default": [
+				"signature",
 				"public-instance-field",
 				"protected-instance-field",
 				"private-instance-field",
@@ -329,18 +397,11 @@
 		"@typescript-eslint/restrict-plus-operands": "error",
 		"@typescript-eslint/type-annotation-spacing": "error",
 		"@typescript-eslint/unified-signatures": "error",
-		"@typescript-eslint/camelcase": 0,
 		"@typescript-eslint/no-explicit-any": 0,
 		"@typescript-eslint/no-use-before-define": ["error", { "typedefs": false, "functions": false }],
 		"@typescript-eslint/member-delimiter-style": ["error", {
-			"multiline": {
-				"delimiter": "semi",
-				"requireLast": true
-			},
-			"singleline": {
-				"delimiter": "semi",
-				"requireLast": false
-			}
+			"multiline": { "delimiter": "semi", "requireLast": true },
+			"singleline": { "delimiter": "semi", "requireLast": false }
 		}],
 		"@typescript-eslint/no-extra-parens": 0,
 		"@typescript-eslint/explicit-function-return-type": 0,
