--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "eslint-config-bamboo",
   "description": "TypeScript ESLint shareable config",
-  "version": "4.0.1",
-  "main": "index.js",
+  "version": "5.0.0",
+  "main": "dist/index.js",
   "author": "Antonio Román <kyradiscord@gmail.com>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build": "tsc -b src",
+    "prelint": "yarn build",
+    "lint": "eslint --fix --ext ts src/index.ts",
+    "prepublishOnly": "yarn lint"
+  },
   "bugs": {
     "url": "https://github.com/kyranet/eslint-config-bamboo/issues"
   },
@@ -15,17 +21,23 @@
     "url": "https://github.com/kyranet/eslint-config-bamboo"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
-    "eslint": "^6.8.0",
-    "typescript": "^3.8.3"
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
+    "eslint": "^7.0.0",
+    "typescript": "^3.9.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
-    "eslint": "^6.8.0",
-    "typescript": "^3.8.3"
+    "@types/node": "^14.0.5",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
+    "eslint": "^7.0.0",
+    "typescript": "^3.9.3"
   },
+  "files": [
+    "dist",
+    "!dist/.tsbuildinfo",
+    "tsconfig.json"
+  ],
   "keywords": [
     "typescript",
     "shareable",
