feat(*): rebrand to @skyra/eslint-config
This project has been rebranded as it has been migrated under the
skyra-project github organization scope. Previous releases of
eslint-config-bamboo will still work, however they will show an
NPM deprecation warning and no further releases will be done for
eslint-config-bamboo.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
 	"editor.tabSize": 4,
 	"editor.useTabStops": true,
 	"files.eol": "\n",
+	"[json]": {
+		"editor.defaultFormatter": "vscode.json-language-features"
+	},
 	"[typescript]": {
 		"editor.defaultFormatter": "vscode.typescript-language-features"
 	},
