--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,27 @@
+# Dependencies
 node_modules/
+
+# Misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Bad NPM is bad
 package-lock.json
-.vs/
+
+# Logs
+logs
+*.log*
+*.tsbuildinfo
+coverage/
+
+# IDE Settings
 .idea/
-*.log
+.vs/
+*.iml
+
+# Generated files
 dist/
