--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "eslint-config-bamboo",
-  "description": "TypeScript ESLint shareable config",
+  "name": "@skyra/eslint-config",
+  "description": "Shareable TypeScript and ESLint configs",
   "version": "5.1.0",
-  "main": "dist/index.js",
-  "author": "Antonio Román <kyradiscord@gmail.com>",
+  "author": "@skyra",
   "license": "MIT",
-  "private": false,
+  "main": "dist/index.js",
+  "homepage": "https://github.com/skyra-project/eslint-config",
   "scripts": {
+    "prebuild": "tsc -b src --clean",
     "build": "tsc -b src",
     "prelint": "yarn build",
     "lint": "eslint --fix --ext ts src/index.ts",
-    "prepublishOnly": "yarn lint"
-  },
-  "bugs": {
-    "url": "https://github.com/kyranet/eslint-config-bamboo/issues"
-  },
-  "homepage": "https://github.com/kyranet/eslint-config-bamboo",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kyranet/eslint-config-bamboo"
+    "prepublishOnly": "yarn lint",
+    "commit": "git-cz",
+    "cz": "git-cz",
+    "up": "yarn upgrade-interactive --latest",
+    "sversion": "yarn standard-version"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.5.0",
@@ -27,10 +24,16 @@
     "typescript": "^3.9.6"
   },
   "devDependencies": {
+    "@commitlint/cli": "^9.0.1",
+    "@commitlint/config-conventional": "^9.0.1",
     "@types/node": "^14.0.14",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
+    "cz-conventional-changelog": "^3.2.0",
     "eslint": "^7.4.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "standard-version": "^8.0.0",
     "typescript": "^3.9.6"
   },
   "files": [
@@ -38,12 +41,50 @@
     "!dist/.tsbuildinfo",
     "tsconfig.json"
   ],
+  "engines": {
+    "node": ">=12",
+    "npm": ">=6"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/skyra-project/eslint-config"
+  },
+  "bugs": {
+    "url": "https://github.com/skyra-project/eslint-config/issues"
+  },
   "keywords": [
+    "skyra",
+    "skyra project",
     "typescript",
     "shareable",
     "eslint",
     "eslintconfig",
     "lint",
     "bamboo"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "yarn lint-staged"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix --ext ts",
+      "prettier --write"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
