--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "dist/index.js",
   "homepage": "https://github.com/skyra-project/eslint-config",
   "scripts": {
-    "prebuild": "tsc -b src --clean",
+    "clean": "tsc -b src --clean",
     "build": "tsc -b src",
     "prelint": "yarn build",
     "lint": "eslint --fix --ext ts src/index.ts",
