--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
     "sversion": "yarn standard-version"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.5.0",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7 || ^4.x"
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-conventional": "^9.1.1",
-    "@types/node": "^14.0.26",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
-    "cz-conventional-changelog": "^3.2.0",
-    "eslint": "^7.6.0",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
+    "@types/node": "^14.6.1",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.7.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "standard-version": "^8.0.2",
-    "typescript": "^3.9.7"
+    "lint-staged": "^10.2.13",
+    "standard-version": "^9.0.0",
+    "typescript": "^4.0.2"
   },
   "files": [
     "dist",
