--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -46,7 +46,7 @@
 - name: 'Bug: Fixed in main'
   description: Issues that report bugs from stable, but that are fixed in main.
   color: B3E88C'
-- name: "Bug: Fixed in staging"
+- name: 'Bug: Fixed in staging'
   description: Issues that report bugs from stable, but that are fixed in staging.
   color: B3E88C
 - name: 'Bug: Confirmed'
