--- a/package.json
+++ b/package.json
@@ -1,94 +1,99 @@
 {
-  "name": "@skyra/eslint-config",
-  "description": "Shareable TypeScript and ESLint configs",
-  "version": "5.3.1",
-  "author": "@skyra",
-  "license": "MIT",
-  "main": "dist/index.js",
-  "homepage": "https://github.com/skyra-project/eslint-config",
-  "scripts": {
-    "clean": "tsc -b src --clean",
-    "build": "tsc -b src",
-    "prelint": "yarn build",
-    "lint": "eslint --fix --ext ts src/index.ts",
-    "prepublishOnly": "yarn lint",
-    "commit": "git-cz",
-    "cz": "git-cz",
-    "update": "yarn upgrade-interactive --latest",
-    "sversion": "yarn standard-version"
-  },
-  "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "eslint": "^7.5.0",
-    "typescript": "^3.9.7 || ^4.x"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^9.1.2",
-    "@types/node": "^14.6.1",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.7.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.13",
-    "standard-version": "^9.0.0",
-    "typescript": "^4.0.2"
-  },
-  "files": [
-    "dist",
-    "!dist/.tsbuildinfo",
-    "tsconfig.json"
-  ],
-  "engines": {
-    "node": ">=12",
-    "npm": ">=6"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/skyra-project/eslint-config"
-  },
-  "bugs": {
-    "url": "https://github.com/skyra-project/eslint-config/issues"
-  },
-  "keywords": [
-    "skyra",
-    "skyra project",
-    "typescript",
-    "shareable",
-    "eslint",
-    "eslintconfig",
-    "lint",
-    "bamboo"
-  ],
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "yarn lint-staged"
-    }
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "lint-staged": {
-    "*.ts": [
-      "eslint --fix --ext ts",
-      "prettier --write"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "resolutions": {
-    "lodash": "^4.17.9",
-    "dot-prop": "^5.2.0"
-  }
+	"name": "@skyra/eslint-config",
+	"description": "Shareable TypeScript and ESLint configs",
+	"version": "5.3.1",
+	"author": "@skyra",
+	"license": "MIT",
+	"main": "dist/index.js",
+	"homepage": "https://github.com/skyra-project/eslint-config",
+	"scripts": {
+		"clean": "tsc -b src --clean",
+		"build": "tsc -b src",
+		"prelint": "yarn build",
+		"lint": "eslint --fix --ext ts src/index.ts",
+		"format": "prettier --write src/**/*.ts",
+		"format:check": "prettier --check src/**/*.ts",
+		"prepublishOnly": "yarn lint",
+		"commit": "git-cz",
+		"cz": "git-cz",
+		"update": "yarn upgrade-interactive --latest",
+		"sversion": "yarn standard-version"
+	},
+	"peerDependencies": {
+		"@typescript-eslint/eslint-plugin": "^3.10.1",
+		"@typescript-eslint/parser": "^3.10.1",
+		"eslint": "^7.5.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"typescript": "^3.9.7 || ^4.x"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^9.1.2",
+		"@commitlint/config-conventional": "^9.1.2",
+		"@types/node": "^14.6.1",
+		"@typescript-eslint/eslint-plugin": "^3.10.1",
+		"@typescript-eslint/parser": "^3.10.1",
+		"cz-conventional-changelog": "^3.3.0",
+		"eslint": "^7.7.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"husky": "^4.2.5",
+		"lint-staged": "^10.2.13",
+		"prettier": "^2.1.1",
+		"pretty-quick": "^3.0.0",
+		"standard-version": "^9.0.0",
+		"typescript": "^4.0.2"
+	},
+	"files": [
+		"dist",
+		"!dist/.tsbuildinfo",
+		"tsconfig.json"
+	],
+	"engines": {
+		"node": ">=12",
+		"npm": ">=6"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/skyra-project/eslint-config"
+	},
+	"bugs": {
+		"url": "https://github.com/skyra-project/eslint-config/issues"
+	},
+	"keywords": [
+		"skyra",
+		"skyra project",
+		"typescript",
+		"shareable",
+		"eslint",
+		"eslintconfig",
+		"lint",
+		"bamboo"
+	],
+	"husky": {
+		"hooks": {
+			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+			"pre-commit": "yarn pretty-quick --staged && yarn lint-staged"
+		}
+	},
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-conventional"
+		]
+	},
+	"lint-staged": {
+		"*.{mjs,js,ts}": "eslint --fix --ext mjs,js,ts"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"resolutions": {
+		"lodash": "^4.17.9",
+		"dot-prop": "^5.2.0"
+	}
 }
