--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
 		"sversion": "yarn standard-version"
 	},
 	"peerDependencies": {
-		"@typescript-eslint/eslint-plugin": "^3.10.1",
-		"@typescript-eslint/parser": "^3.10.1",
-		"eslint": "^7.5.0",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-prettier": "^3.1.4",
+		"@typescript-eslint/eslint-plugin": "^3.x || ^4.x",
+		"@typescript-eslint/parser": "^3.x || ^4.x",
+		"eslint": "^7.x",
+		"eslint-config-prettier": "^6.x",
+		"eslint-plugin-prettier": "^3.x",
 		"typescript": "^3.9.7 || ^4.x"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^9.1.2",
 		"@commitlint/config-conventional": "^9.1.2",
-		"@types/node": "^14.6.1",
-		"@typescript-eslint/eslint-plugin": "^3.10.1",
-		"@typescript-eslint/parser": "^3.10.1",
+		"@types/node": "^14.6.2",
+		"@typescript-eslint/eslint-plugin": "^4.0.1",
+		"@typescript-eslint/parser": "^4.0.1",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^7.7.0",
+		"eslint": "^7.8.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-prettier": "^3.1.4",
 		"husky": "^4.2.5",
