--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,39 +1,27 @@
 {
-  "projectName": "eslint-config",
-  "projectOwner": "skyra-project",
-  "repoType": "github",
-  "repoHost": "https://github.com",
-  "files": [
-    "README.md"
-  ],
-  "imageSize": 100,
-  "commit": false,
-  "commitConvention": "angular",
-  "contributors": [
-    {
-      "login": "kyranet",
-      "name": "Antonio Román",
-      "avatar_url": "https://avatars0.githubusercontent.com/u/24852502?v=4",
-      "profile": "https://github.com/kyranet",
-      "contributions": [
-        "code",
-        "ideas",
-        "projectManagement",
-        "test"
-      ]
-    },
-    {
-      "login": "Favna",
-      "name": "Jeroen Claassens",
-      "avatar_url": "https://avatars3.githubusercontent.com/u/4019718?v=4",
-      "profile": "https://favware.tech/",
-      "contributions": [
-        "code",
-        "ideas",
-        "projectManagement",
-        "test"
-      ]
-    }
-  ],
-  "contributorsPerLine": 7
+	"projectName": "eslint-config",
+	"projectOwner": "skyra-project",
+	"repoType": "github",
+	"repoHost": "https://github.com",
+	"files": ["README.md"],
+	"imageSize": 100,
+	"commit": false,
+	"commitConvention": "angular",
+	"contributors": [
+		{
+			"login": "kyranet",
+			"name": "Antonio Román",
+			"avatar_url": "https://avatars0.githubusercontent.com/u/24852502?v=4",
+			"profile": "https://github.com/kyranet",
+			"contributions": ["code", "ideas", "projectManagement", "test"]
+		},
+		{
+			"login": "Favna",
+			"name": "Jeroen Claassens",
+			"avatar_url": "https://avatars3.githubusercontent.com/u/4019718?v=4",
+			"profile": "https://favware.tech/",
+			"contributions": ["code", "ideas", "projectManagement", "test"]
+		}
+	],
+	"contributorsPerLine": 7
 }
