--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
 	"devDependencies": {
 		"@commitlint/cli": "^11.0.0",
 		"@commitlint/config-conventional": "^11.0.0",
-		"@types/node": "^14.14.10",
-		"@typescript-eslint/eslint-plugin": "^4.9.0",
-		"@typescript-eslint/parser": "^4.9.0",
+		"@sapphire/prettier-config": "^1.0.2",
+		"@types/node": "^14.14.14",
+		"@typescript-eslint/eslint-plugin": "^4.11.0",
+		"@typescript-eslint/parser": "^4.11.0",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^7.14.0",
-		"eslint-config-prettier": "^7.0.0",
-		"eslint-plugin-prettier": "^3.2.0",
-		"husky": "^4.3.5",
-		"lint-staged": "^10.5.2",
+		"eslint": "^7.16.0",
+		"eslint-config-prettier": "^7.1.0",
+		"eslint-plugin-prettier": "^3.3.0",
+		"husky": "^4.3.6",
+		"lint-staged": "^10.5.3",
 		"prettier": "^2.2.1",
 		"pretty-quick": "^3.1.0",
 		"standard-version": "^9.0.0",
@@ -94,5 +95,6 @@
 	"resolutions": {
 		"lodash": "^4.17.9",
 		"dot-prop": "^5.2.0"
-	}
+	},
+	"prettier": "@sapphire/prettier-config"
 }
