--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -13,10 +13,34 @@ on:
   pull_request:
 
 jobs:
+  pre_ci:
+    name: Prepare CI environment
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Project
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+      - name: '[Push] Get commit message'
+        if: github.event_name == 'push'
+        id: push_get_commit_message
+        run: echo ::set-output name=push_commit_message::$(git log --format=%B -n 1 HEAD)
+      - name: '[Pull Request] Get commit message'
+        if: github.event_name == 'pull_request'
+        id: pr_get_commit_message
+        run: echo ::set-output name=pr_commit_message::$(git log --format=%B -n 1 HEAD^2)
+      - name: Add problem matchers
+        run: |
+          echo "::add-matcher::.github/problemMatchers/tsc.json"
+          echo "::add-matcher::.github/problemMatchers/eslint-stylish.json"
+    outputs:
+      commit_message: $( [ -z "${{ steps.pr_get_commit_message.outputs.pr_commit_message }}" ] && echo "${{ steps.push_get_commit_message.outputs.push_commit_message }}" || echo "${{ steps.pr_get_commit_message.outputs.pr_commit_message }}" )
+
   Build:
     name: TypeScript compile
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: "!contains(needs.pre_ci.outputs.commit_message, '[skip ci]')"
+    needs: pre_ci
     steps:
       - name: Checkout Project
         uses: actions/checkout@v2
@@ -31,10 +55,8 @@ jobs:
           key: ${{ runner.os }}-12-${{ hashFiles('**/yarn.lock') }}
       - name: Install Dependencies
         run: yarn --ignore-scripts --frozen-lockfile
-      - name: Compile TypeScript
-        uses: icrawl/action-tsc@v1
-        with:
-          build: src
+      - name: Build Code
+        run: yarn build
       - name: Upload Build bundle to artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -43,7 +65,8 @@ jobs:
 
   CodeQL:
     name: Codequality
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: "!contains(needs.pre_ci.outputs.commit_message, '[skip ci]')"
+    needs: pre_ci
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -73,8 +96,8 @@ jobs:
   Lint:
     name: Linting
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    needs: Build
+    if: "!contains(needs.pre_ci.outputs.commit_message, '[skip ci]')"
+    needs: [pre_ci, Build]
     steps:
       - name: Checkout Project
         uses: actions/checkout@v2
@@ -95,4 +118,4 @@ jobs:
           name: build_bundle
           path: dist/
       - name: Run ESLint
-        uses: icrawl/action-eslint@v1
+        run: yarn lint --fix=false
