--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 		"prelint": "yarn build",
 		"lint": "eslint --fix --ext ts src/index.ts",
 		"format": "prettier --write src/**/*.ts",
-		"prepublishOnly": "yarn lint",
 		"commit": "git-cz",
 		"cz": "git-cz",
 		"update": "yarn upgrade-interactive --latest",
-		"sversion": "yarn standard-version"
+		"sversion": "yarn standard-version",
+		"prepublishOnly": "yarn lint && pinst --disable",
+		"postinstall": "husky install .github/husky",
+		"postpublish": "pinst --enable"
 	},
 	"peerDependencies": {
 		"@typescript-eslint/eslint-plugin": "^3.x || ^4.x",
@@ -30,19 +32,20 @@
 		"@commitlint/cli": "^11.0.0",
 		"@commitlint/config-conventional": "^11.0.0",
 		"@sapphire/prettier-config": "^1.0.6",
-		"@types/node": "^14.14.22",
-		"@typescript-eslint/eslint-plugin": "^4.12.0",
-		"@typescript-eslint/parser": "^4.12.0",
+		"@types/node": "^14.14.25",
+		"@typescript-eslint/eslint-plugin": "^4.15.0",
+		"@typescript-eslint/parser": "^4.15.0",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^7.18.0",
+		"eslint": "^7.19.0",
 		"eslint-config-prettier": "^7.2.0",
 		"eslint-plugin-prettier": "^3.3.1",
-		"husky": "^4.3.8",
-		"lint-staged": "^10.5.3",
+		"husky": "^5.0.9",
+		"lint-staged": "^10.5.4",
+		"pinst": "^2.1.4",
 		"prettier": "^2.2.1",
 		"pretty-quick": "^3.1.0",
 		"standard-version": "^9.1.0",
-		"typescript": "^4.1.3"
+		"typescript": "^4.1.5"
 	},
 	"files": [
 		"dist",
@@ -70,12 +73,6 @@
 		"lint",
 		"bamboo"
 	],
-	"husky": {
-		"hooks": {
-			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-			"pre-commit": "yarn pretty-quick --staged && yarn lint-staged"
-		}
-	},
 	"commitlint": {
 		"extends": [
 			"@commitlint/config-conventional"
